# web-scrapping-pepper

./: .gitignore  README.md  old.py  pepper_data.csv  pepper_data_analysis.ipynb  pepper_recognition.py  pyproject.toml
pepper_scraper/: data.csv
pepper_scraper/pepper_scraper/: items.py  middlewares.py  pepper_scrapped_data.csv  pipelines.py  run_spider.py  settings.py
pepper_scraper/pepper_scraper/spiders/: pepper_scraper.py  pepper_spider.py
pepper_scraper/scrapy/: data.csv  scrapy.cfg  url_scrapy.csv
pepper_scraper/scrapy/pepper_scraper/: items.py  middlewares.py  url_scrapy.csv
pepper_scraper/scrapy/pepper_scraper/spiders/: pepper_scraper.py  pepper_url_spider.py
