[tool.poetry]
name = "pepper_scraper"
version = "0.1.0"
description = ""
authors = ["Jakub Wujec <kuba1302@gmail.com>"]
readme = "README.md"
packages = [{include = "pepper_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
itemadapter = "^0.8.0"
scrapy-splash = "^0.9.0"
loguru = "^0.7.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
